# IPP_grassland

./: .gitignore  calibratethese.csv  calibration_spotpy_setup_MONICA.py  calibration_spotpy_setup_MONICA2.py  crop.json  cropLTE.json  cropV.json  crop_calibration.json  flush-queue.py  monica_io3.py  pyproject.toml  run-calibration.py  run-calibration2.py  run-consumer.py  run-consumerLTE.py  run-consumer_calibration.py  run-parallel-calibrations.py  run-producer.py  run-producerLTE.py  run-producer_calibration.py  run_setup.sh  sim.json  simLTE.json  sim_calibration.json  sim_setupsVK.csv  sim_setups_LTE.csv  sim_setups_VK.csv  sim_setups_VK1.csv  sim_setups_VKold.csv  sim_setups_calibration_VK.csv  site.json  siteLTE.json  soil_io3.py
GRASSLAND_germany/: inputs.json  run_at_hpc.sh
data/germany/: dem_1000_25832_etrs89-utm32n.asc.aux.xml  gwl-max_1000_25832_etrs89-utm32.asc  gwl-max_1000_25832_etrs89-utm32.asc.aux.xml  gwl-mean_1000_25832_etrs89-utm32.asc  gwl-mean_1000_25832_etrs89-utm32.asc.aux.xml  gwl-min_1000_25832_etrs89-utm32.asc  gwl-min_1000_25832_etrs89-utm32.asc.aux.xml  permanent-grass-mask-BB_1000_25832_etrs89-utm32n-realigned.asc  permanent-grass-mask-BB_1000_25832_etrs89-utm32n-realigned.asc.aux.xml  permanent-grass-mask-BB_1000_25832_etrs89-utm32n.asc  (+4 more)
grassmind_bahareh_check/: crop.json  daily_mean_RES1_C402R220.csv  output1.csv  output1_wwithoutfrostkillon.csv  run_monica.bat  sim.json  test_out.csv
grassmind_monica_coupling/: crop.json  out_section_daily.csv  output_biomass.csv  run.py  sim.json  site.json
(+6 files in other folders)
