[tool.poetry]
name = "IPP_grassland"
version = "0.1.0"
description = ""
authors = ["Michael Berg-Mohnicke <michael.berg@zalf.de>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
zalfmas-common = "^0.1.7"
zalfmas-capnp-schemas = "^0.1.14"
zalfmas-fbp = "^0.2.2"
#zalfmas-fbp = {path = "../../../../mas_python_fbp", develop = true}
pyzmq = "^26.2.1"
pycapnp = "^2.0.0"
zalfmas-services = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
